[package]
name = "rust-create-cascade"
version = "0.1.0"

[dependencies]
base64 = "0.13"
bincode = "1.3"
clap = { version = "3.0", features = ["derive"] }
hex = "0.4"
log = "0.4"
rand="0.7"
rayon = "1.5"
rust_cascade = { version = "1.5.0" , features = ["builder"] }
statsd = "0.16.0"
stderrlog = "0.5"
tempfile = "3.10.1"
clubcard = { version = "0.2.0", features = ["crlite-builder"] }
serde_json = "1"
