[package]
name = "rust-create-cascade"
version = "0.1.0"

[dependencies]
base64 = "0.22"
bincode = { version = "2.0", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
log = "0.4"
rand="0.9"
rayon = "1.5"
rust_cascade = { version = "1.5.0" , features = ["builder"] }
statsd = "0.16.0"
stderrlog = "0.6"
tempfile = "3.10.1"
clubcard = { version = "0.3", features = ["builder"] }
clubcard-crlite = { version = "0.3", features = ["builder"] }
serde_json = "1"
