[package]
name = "rust-query-crlite"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.13"
bincode = "1.3"
byteorder = "1.2.7"
clap = { version = "3.0", features = ["derive"] }
der-parser = "7.0"
hex = "0.4"
log = "0.4"
num-bigint = "0.4"
pem = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"] }
rust_cascade = "1.4.0"
rustls = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.2"
stderrlog = "0.5"
x509-parser = { version = "0.13.2", features = ["verify"] }
