[package]
name = "rust-query-crlite"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
bincode = { version = "2.0", features = ["serde"] }
byteorder = "1.2.7"
clap = { version = "4.5", features = ["derive"] }
clubcard = "0.3"
clubcard-crlite = "0.3"
der-parser = "10.0"
hex = "0.4"
log = "0.4"
num-bigint = "0.4"
pem = "3.0"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
rust_cascade = "1.4.0"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.2"
stderrlog = "0.6"
x509-parser = { version = "0.17.0", features = ["verify"] }
